cmake_minimum_required(VERSION 4.0)

project(chapter_1_exercises C)

set(CMAKE_C_STANDARD 99)

add_executable(exercise_1_1 exercise_1_1.c)
add_executable(exercise_1_2 exercise_1_2.c)
add_executable(exercise_1_3 exercise_1_3.c)
add_executable(exercise_1_4 exercise_1_4.c)
add_executable(exercise_1_5 exercise_1_5.c)
